# NBA-Betting-Model

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  test_basketball_reference.py  test_performance.py
configs/: model.yml  paths.yml  schedule.yml
docs/: architecture.md  ingestion-strategy.md
models/: nba_model_latest_metadata_clean.yml
notebooks/: README.md  nba_betting_analysis.ipynb
scripts/: AUTOMATION_README.md  README.md  automation_base.py  cleanup.py  daily_betting_pipeline.py  daily_predictions.py  daily_update.py  manual_update.py  scheduler.py  weekly_refresh.py
src/: __init__.py  constants.py  pipeline.py
src/features/: __init__.py  build_features.py
src/ingest/: __init__.py  explore_database.py  ingest_games.py  ingest_games_new.py  ingest_odds.py  ingest_team_stats.py  investigate_sqlite_db.py  live_data_fetcher.py  realtime_odds_integration.py  sqlite_coverage.py
src/models/: __init__.py  advanced_trainer.py  performance_tracker.py  train_model.py
src/predict/: __init__.py  daily_report.py  daily_report_simple.py  predict_games.py
src/stake/: __init__.py  kelly_criterion.py
src/validation/: data_validator.py
tests/: __init__.py  run_tests.py
tests/integration/: __init__.py  test_pipeline.py
tests/notebooks/nba_betting_analysis/: README.md  __init__.py  run_all_tests.py  test_cell_01_setup.py  test_cell_02_data_loading.py  test_cell_03_features_exploration.py  test_cell_04_correlation_analysis.py  test_cell_05_team_performance.py  test_cell_06_model_performance.py  test_cell_07_visualizations.py  test_cell_4_real_data.py
tests/unit/: test_automation_base_finalize.py  test_automation_base_timeout.py  test_kelly_criterion.py  test_manual_update.py  test_manual_update_dryrun.py  test_predictions.py
