[project]
name = "nba-betting-model"
version = "0.1.0"
description = "A comprehensive machine learning pipeline for NBA moneyline betting predictions using advanced analytics and Kelly criterion bet sizing"
authors = [
    {name = "yirga reminick", email = "yirgareminick@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.14"
dependencies = ["prefect (>=3.4.3,<4.0.0)", "polars (>=1.30.0,<2.0.0)", "requests (>=2.32.3,<3.0.0)", "beautifulsoup4 (>=4.13.4,<5.0.0)", "lxml (>=5.4.0,<6.0.0)", "pandas (>=2.2.3,<3.0.0)", "kagglehub[pandas-datasets] (>=0.3.12,<0.4.0)", "python-dotenv (>=1.1.0,<2.0.0)", "nba-api (>=1.10.2,<2.0.0)", "joblib (>=1.5.2,<2.0.0)", "scikit-learn (>=1.7.2,<2.0.0)", "numpy (>=2.3.4,<3.0.0)"]

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.3.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
